# cb2util

./: .gitignore  .gitmodules  .travis.yml  CB2UTIL-VERSION-GEN  CHANGES  CMakeLists.txt  Cargo.toml  HISTORY.md  LICENSE  Makefile  Makefile.win  README  README.md  arcfour.c  arcfour.h  build.zig  build.zig.zon  cb2_crypto.c  cb2_crypto.h  cb2_crypto.rs  cb2util.c  cbc.c  cbc.h  cbs.c  cheats.c  cheats.h  cheats_common.c  cheats_common.h  compress.c  compress.h  extract-cheats  fileio.c  fileio.h  index.html  mytypes.h  params.json  pcb.c  pcb.h  ps2_elf.h  sha1.h  (+2 more)
codebreaker/: Cargo.toml  build.rs  cb1.rs  cb7.rs  lib.rs  rc4.rs  rsa.rs
contrib/: README.md
contrib/CB2cheats/: .gitignore  CB2cheats.c  CMakeLists.txt  Makefile  README  arcfour.c  arcfour.h  cb2_crypto.c  cb2_crypto.h  mytypes.h
contrib/cb2get/: .gitignore  README  cb2get.sh
contrib/cb2serve/: README
contrib/cb2serve/ps2/: common.php
contrib/cb2serve/ps2/day1/: cb.php  sample.cbc
contrib/cb2serve/ps2/saves/: cb.php
gobreaker/: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  gobreaker.go  gobreaker_test.go
src/: .cdtproject  .project  arcfour.c  arcfour.h  cb2_crypto.c  cb2util.h  cheats.rs  cmd_cbc.rs  cmd_cheats.rs  cmd_pcb.rs  crypto.rs  lib.rs  main.rs  pcb.c  pcb.h  shs.c  shs.h
src/cli/: cheats.rs  mod.rs
src/crypto/: cb1.rs  cb7.rs  mod.rs  rc4.rs
t/: .gitignore  Makefile  aggregate-results.sh  cbc.t  cbc7.t  pcb.t  t0000-basic.sh  t1000-cbc.sh  t1001-cbc-extract-and-decrypt.sh  t1002-cbc-verify.sh  t2000-cbc7.sh  t3000-pcb.sh  t3001-pcb-decrypt-and-strip.sh  t3002-pcb-to-elf.sh  t3003-pcb-verify.sh  t4000-cheats-extract.sh  t4000-cheats.sh  t4001-cheats-extract-and-decrypt.sh  t4002-cheats-compile.sh  test-lib.sh
t/cbc/: 007auf.enc  007auf.txt  ffx.cbc  ffx.enc  ffx.txt  gta3.cbc  gta3.enc  gta3.txt  kingkong.decrypt  kingkong.extract  kingkong.sig  kingkong.txt  kingkong.verify  mgs3.cbc  mgs3.decrypt  mgs3.enc  mgs3.extract  mgs3.sig  mgs3.verify  socom3.cbc  socom3.decrypt  socom3.extract  socom3.sig  socom3.verify
t/cbc7/: mgs3.cbc  mgs3.txt  re4.decrypt  re4.extract  re4.txt  sim2.decrypt  sim2.extract  tonyhaw.cbc  tonyhaw.decrypt  tonyhaw.extract  tonyhaw.raw
t/cheats/: beef.cheats  beef.enc  blitzlg.decrypt  fifa07.decrypt  games2.txt  games3.cheats  games3.enc  games3.txt  gtlcpimp.decrypt  thps410.raw
t/pcb/: chess.decrypt  chess.elf  chess.sig  chess.strip  chess.verify  hdd_upgrade.elf  hello.strip  naplink.decrypt  naplink.elf  naplink.sig  naplink.verify  upgrade.elf  upgrade.strip  upgrade.verify
test/: .gitignore  Makefile  basic.t  cbc-compile.t  cbc-extract-and-decrypt.t  cbc-extract.t  cbc-verify.t  cbs-extract.t  cheats-compile.t  cheats-extract-and-decrypt.t  cheats-extract.t  integration.rs  pcb-decrypt-and-strip.t  pcb-decrypt.t  pcb-to-elf.t  pcb-verify.t  t0000-basic.sh  t1000-cbc-extract.sh  t1001-cbc-extract-and-decrypt.sh  t1002-cbc-verify.sh  t3000-pcb-decrypt.sh  t3001-pcb-decrypt-and-strip.sh  t3002-pcb-to-elf.sh  t3003-pcb-verify.sh  t4000-cheats-extract.sh  t4001-cheats-extract-and-decrypt.sh  t4002-cheats-compile.sh  test-lib.sh
test/cbc/: 007auf.cbc  kingkong.cbc  kingkong.enc  socom3.enc  socom3.txt
test/cbc7/: re4.cbc  sim2.cbc  sim2.txt  tonyhaw.txt
test/cbs/: RESIDENTEVIL-CODE_Veronica-X.cbs  Ratchet_Clank.cbs  TrueCrime_NYC.cbs
test/cheats/: beef.txt  games1.cheats  games1.txt  games2.cheats  games3.cheats  games3.enc  games3.txt  gtlcpimp.cheats  gtlcpimp.enc
test/pcb/: chess.elf  hdd_upgrade.raw  hdd_upgrade.strip  hello.elf  hello.raw  naplink.strip  upgrade.raw
