[package]
name = "cb2util"
version = "0.0.1"
description = "CodeBreaker PS2 File Utility"
authors = ["Mathias Lafeldt <mathias.lafeldt@gmail.com>"]
license = "MIT"
repository = "https://github.com/mlafeldt/cb2util"
documentation = "https://github.com/mlafeldt/cb2util"
edition = "2018"
include = ["src/**/*"]

[dependencies]
clap = "2"
flate2 = "0.2"
codebreaker = { path = "../codebreaker-rs", version = "0.2" }
