[package]
name = "codebreaker"
version = "0.1.0"
description = "Cryptographic functions for CodeBreaker PS2"
authors = ["Mathias Lafeldt <mathias.lafeldt@gmail.com>"]
links = "codebreaker"
build = "build.rs"
edition = "2018"

[lib]
name = "codebreaker"
path = "lib.rs"
doctest = false

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
